forward types in annotation expressions